--- a/hotel-booking-service/src/main/resources/application.yaml
+++ b/hotel-booking-service/src/main/resources/application.yaml
@@ -14,3 +14,7 @@ logging:
   level:
     root: INFO
     com.example.hotelbooking: DEBUG
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n"
